--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,23 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/match_card_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"/>
+
+    <ImageView
+        android:id="@+id/left_panel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@drawable/folding_screen_panel"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/right_panel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:background="@drawable/folding_screen_panel"
+        android:visibility="gone" />
 
 </FrameLayout>
