--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="beige">#F5F5DC</color>
     <color name="light_brown">#D2B48C</color>
     <color name="dark_brown">#8B4513</color>
+    <color name="hanji_paper">#F5F5DC</color>
+    <color name="wood_frame">#8B4513</color>
 </resources>
