--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryContainer">@color/dark_brown</item>
         <item name="colorOnPrimaryContainer">@color/white</item>
         <item name="android:colorBackground">@color/beige</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.SajuDatingApp" parent="Base.Theme.SajuDatingApp" />
