feat: 채팅 기능 구현

--- a/app/src/main/res/menu/chat_menu.xml
+++ b/app/src/main/res/menu/chat_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_delete_chat"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="채팅방 삭제"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_report"
         android:icon="@android:drawable/ic_menu_report_image"
         android:title="신고"
